src/objects/Template_Event_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Template Event Costs</relationshipLabel>
        <relationshipName>Template_Event_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_Event__c</fullName>
        <label>Template Event</label>
        <referenceTo>Template_Event__c</referenceTo>
        <relationshipLabel>Template Event Costs</relationshipLabel>
        <relationshipName>Template_Event_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Template Event Cost</label>
    <nameField>
        <displayFormat>TEC-{0000000}</displayFormat>
        <label>Template Event Cost Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Event Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>